2008-03-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed Bug 373709 - 2
	  Gtk-Criticals when closing source editor.

2008-03-27  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed Bug 373056 -
	  Random MD crash.

2008-03-27  Mike Krüger <mkrueger@novell.com> 

	* gtk-gui/MonoDevelop.SourceEditor.OptionPanels.GeneralOptionsPanel.cs,
	  gtk-gui/gui.stetic, MonoDevelop.SourceEditor/SourceEditorWidget.cs:
	  Fixed Bug 373702 - Null reference errors in source editor.

2008-03-21  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/gui.stetic: Set target GTK# version to 2.8.
	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: Ignore multiple
	  Dispose calls. Don't try to alter focus while widget is being
	  disposed. Fixes two Gtk-Criticals.

2008-03-21  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/SearchAndReplaceWidget.cs,
	  MonoDevelop.SourceEditor/SearchWidget.cs: Fixed "Bug 372817 - With
	  windows split, search always jumps to match in first window
	  regardless of focus".

2008-03-20  Michael Hutchinson <mhutchinson@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorView.cs: Don't try to comment
	  line if language binding is null. Fixes NRE.

2008-03-19  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs,
	  MonoDevelop.SourceEditor/ExtendibleTextEditor.cs: Fixed 'Bug 372256
	  - Region wrapped when Code Folding is disabled'

2008-03-18  Michael Hutchinson <mhutchinson@novell.com> 

	* gtk-gui/gui.stetic: Spelling fix.

2008-03-18  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/EditActions.cs: Fixed Bug 371703 - Unable to
	  delete {.

2008-03-14  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor/SourceEditorWidget.cs: fixed Bug 370134 -
	  Replace box: can't navigate through controls using the Tab key.
